fixed text spacing in nav bar

--- a/Home/home.css
+++ b/Home/home.css
@@ -44,6 +44,11 @@ body, html {
   font-size: 1.2em;
 }
 
+.navbar-expand-lg .navbar-nav .nav-link {
+  margin-right: 5rem;
+  margin-left: 5rem;
+}
+
 .navbar{
   position: fixed;
   width: 100%;
@@ -55,4 +60,5 @@ body, html {
   top: 35%;
   text-shadow: 2px 2px rgba(255,255,255,0.28);
 }
+
 
